--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,8 +12,8 @@ body {
 
 .container {
   width: 90%;
-  max-width: 600px;
-  margin: 0 auto;
+  max-width: 740px;
+  margin: 40px 0 0 80px;
 }
 
 section {
@@ -36,11 +36,15 @@ li {
 */
 
 header {
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(60, 150, 229, 0.1);
   width: 100%;
-  border-bottom: 1px dashed #b5e853;
+  border-bottom: none;
   padding: 20px 0;
-  margin: 0 0 40px 0;
+  margin: 0 0 0 0;
+}
+
+header #downloads {
+  display: none;
 }
 
 header h1 {
